<resources>
    <string name="app_name">ŞakŞak</string>
    <string name="welcome">Welcome</string>
    <string name="limitedtime">Limited time \nsale</string>
    <string name="sale">-50%</string>
    <string name="popularCat">Popular categories</string>
    <string name="about">About</string>
    <string name="brand">Brand</string>
    <string name="itemForm">Item Form</string>
    <string name="itemVolume">Item Volume</string>
    <string name="productFeatures">Product features</string>
    <string name="customerReviews">Customer reviews</string>
    <string name="scent">Scent</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="asc">Ascending</string>
    <string name="filter">Filter</string>
    <string name="favorites">Favorites</string>
    <string name="category">Categories</string>
    <string name="mainerror">Something went wrong!</string>
    <string name="highlySalable">Highly salable items</string>
    <string name="attention">Attention</string>
    <string name="error">Something went wrong!</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="contasguest">Continue as a guest</string>
    <string name="specialFeature">Special Feature</string>
    <string name="welcomeAcc">Welcome, glad to see you</string>
    <string name="createAc">Join to our journey!</string>
    <string name="fillTheGaps">Fill the gaps</string>
    <string name="passshort">Password is too short! (Min. 6 symbols)</string>
    <string name="passequal">Passwords don\'t match</string>
    <string name="pleasewait">Please wait</string>
    <string name="accsuc">Account created successfully</string>
    <string name="internetProblem">You have not connection to Internet</string>
    <string name="infoacc">Sign in with account or continue as a guest</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="sendResetCode">Send reset code</string>
    <string name="resetInfo">Enter your email address which you have registered. After that our team will send special link for resetting your password.</string>
    <string name="resetInfo2">Special email has been sent to your address. Please do not share with anybody! If you can not find email look at spam box in mail.</string>
    <string name="logout">Sign out</string>
    <string name="editProfile">Edit profile</string>
    <string name="longNick">Nickname is too long! (Maximum 25 symbols.)</string>
    <string name="changePhoto">Edit profile picture</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="deletePhoto">Delete photo</string>
    <string name="changePhoto2">Change photo</string>
    <string name="infoper">Permission needed!</string>
    <string name="givePer">Give Permission</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sucupdate">Successfully updated!</string>
    <string name="no">No</string>
    <string name="header">Header</string>
    <string name="mainText">Write about your thoughts</string>
    <string name="cancel">Cancel</string>
    <string name="Post">Post</string>
    <string name="apply">Apply</string>
    <string name="price">Price</string>
    <string name="signintocon">Sign in to continue</string>
    <string name="addCom">Add comment</string>
    <string name="sucPost">Successfully posted!</string>

</resources>