<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
   >

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/contAsGuest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.222">
        <Button
            android:transitionName="signInButtonMain"
            android:layout_width="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/signIn"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/inter_bold"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:elevation="5dp"
            android:textColor="@color/white"
            android:text="@string/signin"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@drawable/accbutton"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        </Button>
        <Button
            android:transitionName="signUpButtonMain"
            android:layout_width="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/signUp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/inter_bold"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:elevation="5dp"
            android:textColor="@color/white"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@drawable/accbutton"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/contAsGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/contasguest"
        android:fontFamily="@font/inter_bold"
        android:textColor="@drawable/textanim"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>