<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.account.LoginFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/welcomeAcc"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>


    <androidx.cardview.widget.CardView
        android:id="@+id/goBack"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_margin="40dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gobackblack"
           >

        </ImageView>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="15dp">

            <EditText
                android:id="@+id/email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textback"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="#C9FFFFFF">

            </EditText>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="15dp">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textback"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="#C9FFFFFF">

            </EditText>



        </androidx.cardview.widget.CardView>

        <Button
            android:transitionName="signInButton"
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:id="@+id/signin"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/inter_bold"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:elevation="5dp"
            android:textColor="@color/white"
            android:text="@string/signin"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@drawable/accbutton"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgotpass"
            android:id="@+id/forgotPass"
            android:layout_margin="14dp"
            android:textColor="@drawable/textanim"
            android:fontFamily="@font/inter_bold"
            android:layout_height="wrap_content">


        </TextView>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>