<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.bashirli.saksak.util.SavingMotionLayout

        android:layout_width="match_parent"
        android:id="@+id/motionLayout"
        android:saveEnabled="true"

        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_selected_category_scene"
        tools:context=".ui.fragment.main.SelectedCategoryFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            app:cardElevation="10dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"

            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gobackblack">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressSelectedCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ProgressBar>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="CategoryName"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintStart_toEndOf="@+id/goBack"
            app:layout_constraintTop_toTopOf="parent">


        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/ascback"
                android:drawableStart="@drawable/ascending"
                android:drawablePadding="10dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center|start"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/asc"
                android:textColor="#C1C1C1"
                android:textSize="12dp">

            </TextView>

            <TextView
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/filterback"
                android:drawableStart="@drawable/filter"
                android:drawablePadding="10dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center|start"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/filter"
                android:textColor="#C1C1C1"
                android:textSize="12dp">

            </TextView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSelectedCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        </androidx.recyclerview.widget.RecyclerView>

    </com.bashirli.saksak.util.SavingMotionLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:drawableEnd="@drawable/openarrow"
                    android:padding="5dp"
                    android:id="@+id/priceText"
                    android:text="@string/price"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_bold"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content">

                </TextView>


                <LinearLayout
                    android:id="@+id/priceList"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:endIconMode="clear_text"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        android:hint="Min."
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/minPrice"
                            android:inputType="numberSigned"
                            android:layout_height="wrap_content">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:endIconMode="clear_text"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        android:hint="Max."
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:inputType="numberSigned"
                            android:id="@+id/maxPrice"
                            android:layout_height="wrap_content">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/line"
                    android:layout_height="5dp">

                </ImageView>
            </LinearLayout>
            <Button
                android:id="@+id/applyButton"
                android:layout_width="match_parent"
                android:text="@string/apply"
                android:backgroundTint="@color/themecolor"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_bold"
                android:textSize="15dp"
                android:textColor="@color/black"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_height="wrap_content">

            </Button>

        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
